# BIL-Kernel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
axle/: __init__.py  client.py  exceptions.py  types.py
axle/cli/: endpoints.py  main.py
crates/bil-axle/: Cargo.toml
crates/bil-axle/src/: lib.rs
crates/bil-bundle/: Cargo.toml
crates/bil-bundle/src/: lib.rs
crates/bil-cli/: Cargo.toml
crates/bil-cli/src/: main.rs
crates/bil-cli/tests/: cli.rs  phase5_examples.rs  report_cli.rs
crates/bil-client/: Cargo.toml
crates/bil-client/src/: lib.rs
crates/bil-client/tests/: client.rs
crates/bil-core/: Cargo.toml
crates/bil-core/src/: lib.rs
crates/bil-core/tests/: phase5_examples.rs
crates/bil-hash/: Cargo.toml
crates/bil-hash/src/: lib.rs
crates/bil-legal/: Cargo.toml
crates/bil-legal/src/: lib.rs
crates/bil-merkle/: Cargo.toml
crates/bil-merkle/src/: lib.rs
crates/bil-policy/: Cargo.toml
crates/bil-policy/src/: lib.rs
crates/bil-receipt/: Cargo.toml
crates/bil-receipt/src/: lib.rs
crates/bil-report/: Cargo.toml
crates/bil-report/src/: lib.rs
crates/bil-risk/: Cargo.toml
crates/bil-risk/src/: lib.rs
crates/bil-schema/: Cargo.toml
crates/bil-schema/src/: lib.rs
crates/bil-verify/: Cargo.toml
crates/bil-verify/src/: lib.rs
docs/: changelog.md  configuration.md  index.md  python-api.md  quickstart.md  troubleshooting.md
docs/overrides/: main.html
docs/tools/: check.md  disprove.md  extract_decls.md  extract_theorems.md  have2lemma.md  have2sorry.md  merge.md  normalize.md  rename.md  repair_proofs.md  simplify_theorems.md  sorry2lemma.md  theorem2lemma.md  theorem2sorry.md  verify_proof.md
examples/: extract_and_validate.py  starting_demo.ipynb
examples/ai-decision-bundle/: README.md  check-response.json  controls.json  decision-source.json  institutional.json  risk.json
examples/ai-decision-bundle/ai-decision-bundle.bil/: axle.json  bundle.json  controls.json  institutional.json  manifest.json  merkle.json  receipt.json  risk.json
examples/ai-decision-bundle/reports/: audit-review-example.md  regulatory-review-example.md
examples/axle-proof-artifact/: README.md  verify-proof-response.json
examples/axle-proof-artifact/axle-proof-artifact.bil/: axle.json  bundle.json  manifest.json  merkle.json  receipt.json
examples/keys/: README.md  phase5-ed25519-private.der  phase5-ed25519-public.der
examples/lean-proof-bundle/: README.md  check-response.json  lean-proof-bundle.receipt.json  proof.lean
examples/lean-proof-bundle/lean-proof-bundle.bil/: axle.json  bundle.json  manifest.json  merkle.json
schemas/v0/: axle-evidence-record.schema.json  bundle-descriptor.schema.json  bundle-manifest.schema.json  control-registry.schema.json  institutional-profiles.schema.json  merkle-document.schema.json  receipt-document.schema.json  risk-registry.schema.json  verification-report.schema.json
scripts/: refresh_phase5_examples.sh
specs/: assurance-interop-v0.md  axle-compat-profile-v0.md  bil-bundle-v0.md  bil-manifest-v0.md  bil-merkle-v0.md  bil-receipt-v0.md  bil-report-v0.md  bil-verification-v0.md  institutional-profiles-v0.md
templates/reports/: audit-review-v0.md  regulatory-review-v0.md
tests/: bil_bridge_test.py
