[workspace]
members = [
    "crates/bil-axle",
    "crates/bil-client",
    "crates/bil-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
