[workspace]
members = [
    "crates/bil-axle",
    "crates/bil-core",
    "crates/bil-schema",
    "crates/bil-hash",
    "crates/bil-merkle",
    "crates/bil-bundle",
    "crates/bil-receipt",
    "crates/bil-verify",
    "crates/bil-report",
    "crates/bil-client",
    "crates/bil-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["sha2"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
