[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-axle"
version = "1.4.0"
description = "Python client for AXLE (Axiom Lean Engine) API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AxiomMath", email = "axle@axiommath.ai" }
]
keywords = ["lean", "lean4", "theorem-proving", "formal-verification", "proof-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://axle.axiommath.ai/"
Documentation = "https://axle.axiommath.ai/v1/docs/"
Repository = "https://github.com/AxiomMath/axiom-lean-engine"
Issues = "https://github.com/AxiomMath/axiom-lean-engine/issues"

[project.scripts]
axle = "axle.cli:main"

[tool.setuptools.packages.find]
include = ["axle*"]

[tool.setuptools.package-data]
axle = ["py.typed"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.14.11,<0.15",  # Keep in sync with .pre-commit-config.yaml
    "aioresponses>=0.7.0",
    "mkdocs-material>=9.0.0",
    "types-requests>=2.28.0",
    "build>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
# We run mypy through pre-commit which runs in an isolated environment.
# As such, mypy does not have access to all of our environment packages.
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
