[package]
name = "bil-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bil-core = { path = "../bil-core" }
bil-hash = { path = "../bil-hash" }
bil-legal = { path = "../bil-legal" }
bil-merkle = { path = "../bil-merkle" }
bil-policy = { path = "../bil-policy" }
bil-receipt = { path = "../bil-receipt" }
bil-risk = { path = "../bil-risk" }
bil-verify = { path = "../bil-verify" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
bil-axle = { path = "../bil-axle" }
tempfile = "3"
