[package]
name = "bil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bil"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bil-client = { path = "../bil-client" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"
