[package]
name = "bil-receipt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bil-core = { path = "../bil-core" }
bil-hash = { path = "../bil-hash" }
chrono.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
rand.workspace = true
rsa.workspace = true
serde_json.workspace = true
sha2.workspace = true
signature.workspace = true
thiserror.workspace = true
walkdir.workspace = true
