[package]
name = "bil-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bil-core = { path = "../bil-core" }
bil-hash = { path = "../bil-hash" }
bil-merkle = { path = "../bil-merkle" }
bil-receipt = { path = "../bil-receipt" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
bil-axle = { path = "../bil-axle" }
bil-bundle = { path = "../bil-bundle" }
chrono.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rsa.workspace = true
tempfile = "3"
